--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@
 :root {
   --normal-font: "Catamaran", sans-serif;
   --contrast-color: #44dab9;
+  --color06: #203c20;
   --color05: #155939;
   --color04: #1B8C57;
   --color03: #5EA689;
