--- a/styles/contato.css
+++ b/styles/contato.css
@@ -27,8 +27,7 @@ body {
 }
 
 .first-container .logo {
-	width: 100px;
-  transform: translateX(5%);
+	width: 25rem;
 }
 
 .first-container .logo-text {
@@ -219,7 +218,7 @@ button.submit-question {
 	}
 
 	.first-container .logo {
-		width: 130px;
+		width: 30rem;
 	}
 
 	.first-container .logo-text {
@@ -243,7 +242,7 @@ button.submit-question {
 	}
 
 	.first-container .logo {
-		width: 200px;
+		width: 40rem;
 	}
 
 	.first-container .logo-text {
