--- a/styles/ead.css
+++ b/styles/ead.css
@@ -1,51 +1,56 @@
 .hero {
 	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	justify-items: center;
+	align-items: center;
+	width: 100%;
+	height: 77.6vh;
+	background-color: #5EA689;
+}
+
+.hero .img-container {
+	display: flex;
 	justify-content: center;
 	align-items: center;
-	grid-template-columns: repeat(2, 1fr);
-	background-color: #5EA689;
-	padding: 15px;
+	padding-top: 30px;
+	width: 100%;
 }
 
 .hero img {
-	width: 100%;
-	padding: 30px;
+	width: 90%;
 }
 
 .hero .text-container {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	height: 85%;
-	padding: 15px;
+	width: 90%;
+	height: 80%;
+	padding: 30px;
 	border-radius: 15px;
-	opacity: 1;
 	background-color: #15593980;
 	color: white;
 }
 
 .hero .text-container h1 {
-	font-size: 4.2rem;
+	font-size: 3rem;
 }
 
 .hero .text-container p {
-	font-size: 2.4rem;
-	text-indent: 3rem;
-}
-
-section:nth-child(2) {
 	font-size: 2rem;
-	font-weight: bolder;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 7rem;
 }
 
-.comments {
-	background-color: var(--color04);
-	width: 90%;
-	height: fit-content;
-	margin: 0 auto 30px auto;
-	padding: 15px;
+@media (max-width: 768px) {
+	.hero {
+		grid-template-columns: 1fr;
+		height: fit-content;
+	}
+
+	.hero .img-container {
+		width: 100%;
+	}
+
+	.hero img {
+		width: 80%;
+	}
 }
