--- a/styles/ead.css
+++ b/styles/ead.css
@@ -1,10 +1,18 @@
+body {
+	display: grid;
+	grid-template-rows: min-content max-content min-content;
+}
+
+body::-webkit-scrollbar {
+	display: none;
+}
+
 .hero {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	justify-items: center;
 	align-items: center;
 	width: 100%;
-	height: 77.6vh;
 	background-color: #5EA689;
 }
 
