--- a/styles/ead.css
+++ b/styles/ead.css
@@ -13,6 +13,7 @@ body::-webkit-scrollbar {
 	justify-items: center;
 	align-items: center;
 	width: 100%;
+	height: 100%;
 	background-color: #5EA689;
 }
 
