--- a/styles/global.css
+++ b/styles/global.css
@@ -1,68 +1,69 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-  --normal-font: "Catamaran", sans-serif;
-  --contrast-color: #44dab9;
-  --color06: #203c20;
-  --color05: #155939;
-  --color04: #1B8C57;
-  --color03: #5EA689;
-  --color02: #84BFA4;
-  --color01: #B8D9CA;
+    --normal-font: "Catamaran", sans-serif;
+    --contrast-color: #44dab9;
+    --color06: #203c20;
+    --color05: #155939;
+    --color04: #1b8c57;
+    --color03: #5ea689;
+    --color02: #84bfa4;
+    --color01: #b8d9ca;
 }
 
 .bg-color-primary {
-  background-color: var(--color01);
+    background-color: var(--color01);
 }
 
 .bg-color-secondary {
-  background-color: var(--color02);
+    background-color: var(--color02);
 }
 
 .bg-color-third {
-  background-color: var(--color03);
+    background-color: var(--color03);
 }
 
 .bg-color-fourth {
-  background-color: var(--color04);
+    background-color: var(--color04);
 }
 
 .bg-color-fifth {
-  background-color: var(--color01);
+    background-color: var(--color01);
 }
 
 .bg-contrast-color {
-  background-color: var(--contrast-color);
+    background-color: var(--contrast-color);
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 html {
-  scroll-behavior: smooth;
-  font-size: 50%;
+    scroll-behavior: smooth;
+    font-size: 50%;
+    width: 100vw;
 }
 
 body {
-  font-family: "Catamaran", sans-serif;
-  overflow-x: hidden;
+    font-family: "Catamaran", sans-serif;
+    overflow-x: hidden;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 62.5%;
-  }
+    html {
+        font-size: 62.5%;
+    }
 }
 
 .container-fluid {
-  width: 100%;
-  color: white;
+    width: 100%;
+    color: white;
 }
