--- a/styles/servicos.css
+++ b/styles/servicos.css
@@ -5,8 +5,19 @@ input {
     outline: none;
 }
 
-h2 {
+.warning-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.warning-container h2 {
     font-size: 36px;
+}
+
+.warning-container img {
+    height: 400px;
 }
 
 .search-box-container {
@@ -42,14 +53,18 @@ h2 {
 }
 
 .job-cards-container {
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 24px;
-    height: fit-content;
     padding: 24px 0;
-    max-height: fit-content;
+    min-height: 300px;
+    box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.4);
+}
+
+.job-cards-container::-webkit-scrollbar {
+    display: none;
 }
 
 .job-card {
@@ -59,12 +74,12 @@ h2 {
     height: 400px;
     border-radius: 8px;
     box-shadow: 1px 1px 16px rgba(0, 0, 0, 0.1);
+    animation: 0.3s ease-in-out;
 }
 
 .job-image {
     width: 25%;
     height: 100%;
-    background-image: url("../images/Serviços/vaga-teste.jpg");
     background-size: cover;
     border-radius: 8px 0 0 8px;
 }
@@ -123,14 +138,27 @@ h2 {
     color: white;
 }
 
+.buttons-wrapper button p:nth-child(1) {
+    font-size: 20px;
+}
+
+.buttons-wrapper button p:nth-child(2) {
+    font-size: 26px;
+}
+
 .buttons-wrapper button.secondary {
     background-color: #fff;
     border: 1px solid var(--color04);
     color: var(--color04);
 }
 
+button a {
+    color: var(--color04);
+}
+
 button:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
 
 button:target {
