--- a/styles/servicos.css
+++ b/styles/servicos.css
@@ -74,7 +74,7 @@ input {
     height: 400px;
     border-radius: 8px;
     box-shadow: 1px 1px 16px rgba(0, 0, 0, 0.1);
-    animation: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 .job-image {
@@ -114,7 +114,6 @@ input {
     width: 120px;
     height: 120px;
     box-shadow: 2px 1px 6px rgba(0, 0, 0, 0.2);
-    background-image: url("../images/logo.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -163,4 +162,25 @@ button:hover {
 
 button:target {
     background-color: black;
+}
+
+@media (max-width: 768px) {
+    .job-card {
+        flex-direction: column;
+        height: 800px;
+    }
+
+    .job-image {
+        width: 100%;
+        height: 100%;
+    }
+
+    .job-info {
+        width: 100%;
+        height: 500px;
+    }
+
+    .job-cards-container {
+        min-height: 600px;
+    }
 }
