--- a/styles/servicos.css
+++ b/styles/servicos.css
@@ -165,6 +165,26 @@ button:target {
 }
 
 @media (max-width: 768px) {
+    .search-box-container {
+        height: 200px;
+    }
+
+    .search-box {
+        font-size: 40px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 16px;
+        width: 80%;
+        height: 80px;
+        border: 2px solid var(--color05);
+        padding: 4px 24px;
+    }
+
+    .search-box input {
+        font-size: 24px;
+    }
+
     .job-card {
         flex-direction: column;
         height: 800px;
