aviso de pesquisas estilizado para celular

--- a/styles/servicos.css
+++ b/styles/servicos.css
@@ -6,6 +6,7 @@ input {
 }
 
 .warning-container {
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
